@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/config/conf.php.dist,v 1.1 2008/02/10 20:52:27 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/config/conf.php.dist,v 1.2 2008/02/10 21:02:10 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -70,6 +70,9 @@ $conf->loaded = true;
 // don't want to set each domain into this file.
 //
 //
+// $conf->domains[$i]->login_prefix = '';
+//  Fill in if you require login prefixes for your mail server
+//
 // $conf->domains[$i]->login_suffix = '';
 //  Fill in if you require login suffixes for your mail server
 //
@@ -120,6 +123,7 @@ $conf->domains[$i]->smtp = '';
 $conf->domains[$i]->smtp_port = 25;
 $conf->domains[$i]->login_with_domain = 0;
 $conf->domains[$i]->login_with_domain_character = '@';
+$conf->domains[$i]->login_prefix = '';
 $conf->domains[$i]->login_suffix = '';
 $conf->domains[$i]->login_aliases = array();
 $conf->domains[$i]->login_allowed = array();
@@ -139,6 +143,7 @@ $conf->domains[$i]->quota_type='STORAGE';
 //$conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->login_with_domain = 0;
 //$conf->domains[$i]->login_with_domain_character = '@';
+//$conf->domains[$i]->login_prefix = '';
 //$conf->domains[$i]->login_suffix = '';
 //$conf->domains[$i]->login_aliases = array();
 //$conf->domains[$i]->login_allowed = array();
@@ -155,6 +160,7 @@ $conf->domains[$i]->quota_type='STORAGE';
 //$conf->domains[$i]->smtp_port = 25;
 //$conf->domains[$i]->login_with_domain = 0;
 //$conf->domains[$i]->login_with_domain_character = '@';
+//$conf->domains[$i]->login_prefix = '';
 //$conf->domains[$i]->login_suffix = '';
 //$conf->domains[$i]->login_aliases = array();
 //$conf->domains[$i]->login_allowed = array();
